# fiery-interpol

./: .gitignore  README.md  codecov.yml  pyproject.toml  zensical.toml
.devcontainer/: devcontainer.json
.github/actions/pypi/: action.yaml
.github/workflows/: coverage-on-push.yaml  coverage.yaml  lint-on-push.yaml  lint.yaml  publish-on-release.yaml  test-and-publish.yaml  test-matrix.yaml  test-on-push.yaml
docs/: index.md
docs/api/: index.md
docs/examples/: index.md  resize.ipynb
docs/stylesheets/: extra.css
examples/: interpolate.ipynb  rotation.ipynb
interpol/: api.py
src/fiery/interpol/: __init__.py  api.py  autograd.py  bounds.py  coeff.py  iso0.py  iso1.py  jit_utils.py  jitfields.py  nd.py  pushpull.py  resize.py  restrict.py  splines.py  utils.py
tests/: requirements.txt  test_coeff.py  test_gradcheck_pushpull.py
